# iraklis7_nn

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-app.yml  test-app.yml
docs/: mkdocs.yml
docs/docs/: index.md
iraklis7_nn/: __init__.py  config.py  dataset.py  features.py  plots.py
iraklis7_nn/modeling/: analysis.py  predict.py  train.py
notebooks/: 0-data-exploration.ipynb  1-data-cleaning-and-features.ipynb  2-modeling.ipynb  3-analysis.ipynb
tests/: test_model.py
