[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "iraklis7_nn"
version = "0.1.1"
description = "Using TensorFlow Neural Network on the MNIST dataset for classification"
authors = [
  { name = "Iraklis Diamantidis" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.9.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["iraklis7_nn"]
force_sort_within_sections = true


